fixed-overlapping-form

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ font-family: 'Montserrat', sans-serif;
 
 .form-control{
     position: relative;
-    right: 100px;
+    right: 105px;
 }
 .container-wrapper {
     margin: 0 auto;
